MyDemoOrg/force-app/main/default/objects/Student__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Jaipur</fullName>
            </value>
            <value>
                <fullName>Udaipur</fullName>
            </value>
            <value>
                <fullName>Nathdwara</fullName>
            </value>
            <value>
                <fullName>Haji ali</fullName>
            </value>
            <value>
                <fullName>Indore</fullName>
            </value>
            <value>
                <fullName>Bhopal</fullName>
            </value>
            <value>
                <fullName>Gwalior</fullName>
            </value>
            <value>
                <fullName>Ujjain</fullName>
            </value>
            <value>
                <fullName>Sanawad</fullName>
            </value>
            <value>
                <fullName>Vadodara</fullName>
            </value>
            <value>
                <fullName>Ahmedabad</fullName>
            </value>
            <value>
                <fullName>Rajkot</fullName>
            </value>
            <value>
                <fullName>Jamnagar</fullName>
            </value>
            <value>
                <fullName>Surat</fullName>
            </value>
            <value>
                <fullName>Nagpur</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Shirdi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>