MyDemoOrg/force-app/main/default/objects/Student__c/fields/Faculty__c.field-meta.xml
<CustomField>
    <fullName>Faculty__c</fullName>
    <label>Faculty</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.House__c</field>
            <operation>equals</operation>
            <valueField>Faculty__c.House__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Faculty__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>