MyDemoOrg/force-app/main/default/objects/Student__c/fields/House__c.field-meta.xml
<CustomField>
    <fullName>House__c</fullName>
    <label>House</label>
    <referenceTo>House__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>