MyDemoOrg/force-app/main/default/objects/Student__c/fields/Trigger_Time_05__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Time_05__c</fullName>
    <defaultValue>NOW()  - 0.03109</defaultValue>
    <label>Trigger Time 05</label>
    <type>DateTime</type>
</CustomField>