MyDemoOrg/force-app/main/default/objects/Student__c/validationRules/Age_criteria.validationRule-meta.xml
<ValidationRule>
    <fullName>Age_criteria</fullName>
    <active>true</active>
    <errorConditionFormula>Age__c &lt;18</errorConditionFormula>
    <errorDisplayField>DOB__c</errorDisplayField>
    <errorMessage>Age should be more than 18.</errorMessage>
</ValidationRule>